--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "3drandom",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://NyaNyav2.github.io/3D-Portfolio/",
+  
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
